# ansible-role-environment

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
tasks/: main.yml
templates/: environment.d.j2
