[project]
name = "environment"
version = "0.0.0"
description = "Ansible role for setting up /etc/environment(.d)."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = []
repository = "https://github.com/jomrr/ansible-role-environment"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
